--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+@import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css";
 
 @custom-variant dark (&:is(.dark *));
 
@@ -198,4 +200,8 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+  .icon-style {
+    @apply bg-white shadow-md rounded-full p-2 text-4xl;
+  }
+  
 }
